sonarqube issues resolved